Fix dark mode white bg on hover, last schedule btn

--- a/css/dark.css
+++ b/css/dark.css
@@ -40,6 +40,9 @@
 	body.dark-mode .cs-button-solid:before {
 		background-color: #fff;
 	}
+	body.dark-mode #cta-697 .cs-button-solid:before {
+		background-color: var(--secondary);
+	}
 	.dark {
 		display: none;
 	}
